# rin-v0-extended

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.bat  setup.py  setup.sh  test_fixed_query.py  test_lists.py  test_query_processing.py  test_reminders.py  test_setup.py
docs/: implementation-tips.md  telegram_bot_setup.md  v0-guide-extended.md  v0-guide.md
rin/: __init__.py  audio.py  cli.py  config.py  core.py  email_drafts.py  lists.py  llm.py  logging_config.py  reminders.py  search.py  storage.py  stt.py  telegram_bot.py  tts.py
src/: index.js  storage.js
